# nonebot-plugin-clock

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
nonebot_plugin_clock/: Clock.py  README.md  __init__.py  config.py  database.py  handle.py  natural_language_clock.py  scheduler.py  uilts.py  utils.py
nonebot_plugin_clock/database/: database.py
nonebot_plugin_clock/llm/: __init__.py  api.py  llm.py  prompt.py
nonebot_plugin_clock/model/: Clock.py  __init__.py
nonebot_plugin_clock/tools/: _Holiday_info.py
